Add metadata for output result

--- a/safe_geonode/templates/safe/safe.html
+++ b/safe_geonode/templates/safe/safe.html
@@ -45,13 +45,13 @@
           <div id="block_4" class="barlittle"></div>
           <div id="block_5" class="barlittle"></div>
         </div>
+        <a id="reset" style="display:none" class="btn">Ask again</a>
+
       </div>
-      <div id="result" class="span9">
-        <a id="source-code" href="#" rel="popover" title="A Title" data-content="And here's some amazing content. It's very engaging. right?">Source code</a>
-        </div>
-      </div>
-      <div id="leftpanel" class="pull-right span2">
-        <small>Try again:&nbsp;</small><a id="reset" href="#" class="btn">Reset</a>
+      <div id="result" class="span10">
+          <div class="page-header">
+            <h1>Impact assesment <small></small></h1>
+          </div>
       </div>
     </div>
   </div>
