--- a/safe_geonode/static/safe/css/safe.css
+++ b/safe_geonode/static/safe/css/safe.css
@@ -55,6 +55,7 @@ footer {
     color:white;
     background: black;
     opacity: 0.9;
+    max-height: 300px;
 }
 
 .leaflet-bottom {
@@ -67,6 +68,8 @@ footer {
 
 #answer {
     height: 0px;
+    overflow: scroll;
+    max-height: 300px;
 }
 
 #answermark {
@@ -75,25 +78,25 @@ footer {
 
 #result {
     display: none;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 #result {
     color: black;
 }
 
-#result > .alert {
-    overflow: scroll;
-}
-
-
 #reset {
     margin-top: 10px;
     margin-left: 10px;
 }
 
-#main{
+#main {
     width: 100%;
+}
+
+#calculation {
+    display:none;
+    margin-top: 10px;
 }
 
 .barlittle {
